# Adv-ML-Second-Module

./: Dockerfile  README.md  baseline.py  docker-compose.yml  model.py  pyproject.toml
data/: results.csv
results/: after_train_eval_results.json  all_results.json
results/checkpoint-11792/: config.json  rng_state.pth  scheduler.pt  trainer_state.json
results/checkpoint-17688/: rng_state.pth  scheduler.pt  trainer_state.json
results/checkpoint-5896/: rng_state.pth  scheduler.pt  trainer_state.json
wandb/offline-run-20240511_222133-fxs81fso/: run-fxs81fso.wandb
wandb/offline-run-20240511_222133-fxs81fso/files/: wandb-metadata.json
wandb/run-20240511_224832-lb55bcmq/: run-lb55bcmq.wandb
wandb/run-20240511_224832-lb55bcmq/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
